--- a/src/packages/_styles/color.scss
+++ b/src/packages/_styles/color.scss
@@ -24,3 +24,11 @@
 .e-error-bg {
     background-color: $e-error-color;
 }
+// 通用点击hover效果
+.e-hover {
+    opacity: 0.7;
+}
+.e-disabled {
+    background: $e-disabled-color;
+    color: #fff!important;
+}
